fix font and profile spacing

--- a/blocks/modal/__close-button/modal__close-button.css
+++ b/blocks/modal/__close-button/modal__close-button.css
@@ -10,6 +10,11 @@
   right: -35px;
 }
 
+.modal__close-button:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
 @media screen and (max-width: 320px) {
   .modal__close-button {
     width: 22px;
