--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,5 @@
 .page {
   background: black;
   max-width: 1280px;
+  font-family: Inter, sans-serif;
 }
