--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,4 +2,6 @@
   display: grid;
   grid-template-areas: "name edit" "ocupation ocupation";
   align-content: center;
+  margin-left: 30px;
+  margin-right: 20px;
 }
